--- a/TodaysHouse/build.gradle
+++ b/TodaysHouse/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	compileOnly 'com.auth0:java-jwt:3.19.2'
 
+	//valid
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	//AWS S3
 	//implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'		--넣으면 오류난다.
 	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.172'
