--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:hanghae_clone
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://spring-db.ce9lpazmr2r2.ap-northeast-2.rds.amazonaws.com:3306/cloneDB
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
 
 cloud.aws.credentials.access-key=111
 cloud.aws.credentials.secret-key=222
