--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:h2:mem:hanghae_clone
+spring.main.allow-bean-definition-overriding=true
 
 
 
