--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -2,11 +2,19 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:hanghae_clone
 spring.jpa.show-sql=true
 
+
+spring.main.allow-bean-definition-overriding=true
+
+
 server.port=8090
 
-cloud.aws.credentials.access-key=111
-cloud.aws.credentials.secret-key=222
+
+cloud.aws.credentials.access-key=1
+cloud.aws.credentials.secret-key=2
 cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=333
+cloud.aws.s3.bucket=3
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 #logging.level.com.amazonaws.util.EC2MetadataUtils=error
