--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
 
+server.port=8090
+
+cloud.aws.credentials.access-key=1
+cloud.aws.credentials.secret-key=2
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=3
