--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -7,4 +7,4 @@ server.port=8090
 cloud.aws.credentials.access-key=1
 cloud.aws.credentials.secret-key=2
 cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=3
+cloud.aws.s3.bucket=j3
