--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -3,4 +3,12 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
 
+spring.datasource.url=jdbc:mysql://spring-db.ce9lpazmr2r2.ap-northeast-2.rds.amazonaws.com:3306/cloneDB
+spring.datasource.username=neet0
+spring.datasource.password=asdfqwer1
+spring.jpa.hibernate.ddl-auto=update
 
+cloud.aws.credentials.access-key=AKIATQVO2Z3IFA2RWNPP
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=junsj119
