--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:hanghae_clone
+spring.datasource.url=jdbc:h2:mem:hanghae_clone
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
-
 
