각종 토글 수정, 추후에 수정 필요

--- a/TodaysHouse/src/main/resources/application.properties
+++ b/TodaysHouse/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:h2:mem:hanghae_clone
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
 
+server.port=8090
+
+cloud.aws.credentials.access-key=AKIATQVO2Z3INMNBZGHO
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=junsj119
